[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Lobster-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/botao_voltar.png" type="Texture" id=2]
[ext_resource path="res://assets/images/botao_avancar.png" type="Texture" id=3]
[ext_resource path="res://assets/images/botao_jogarNovamente.png" type="Texture" id=4]
[ext_resource path="res://Spript/LevelComplete.gd" type="Script" id=5]
[ext_resource path="res://assets/images/teste.png" type="Texture" id=6]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="Popup" type="Popup"]
pause_mode = 2
margin_left = 56.0
margin_top = 295.0
margin_right = 654.0
margin_bottom = 915.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.439216, 0.439216, 0.439216, 0.6 )
self_modulate = Color( 0.439216, 0.439216, 0.439216, 0.6 )
position = Vector2( -60.1089, -297.315 )
scale = Vector2( 1.01177, 1.01052 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="."]
margin_right = 578.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "NÃ­vel 1
Completado!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="TextureButton" parent="."]
margin_left = 80.5193
margin_top = 464.045
margin_right = 180.519
margin_bottom = 564.045
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jogarNovamente" type="TextureButton" parent="."]
margin_left = 247.857
margin_top = 462.041
margin_right = 347.857
margin_bottom = 565.041
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="avancar" type="TextureButton" parent="."]
margin_left = 421.495
margin_top = 456.943
margin_right = 521.495
margin_bottom = 556.943
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 291.352, 296.65 )

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 7 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-1556568734938950/6831743912"
interstitial_id = "ca-app-pub-1556568734938950/5412696949"
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="jogarNovamente" to="." method="_on_jogarNovamente_pressed"]
[connection signal="pressed" from="avancar" to="." method="_on_avancar_pressed"]
